--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.10",
     "industriel-rh-site-1": "file:",
+    "leaflet": "^1.9.4",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "swiper": "^11.2.4"
   },
   "devDependencies": {
