--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "framer-motion": "^12.4.10",
     "industriel-rh-site-1": "file:",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.486.0",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "swiper": "^11.2.4"
