--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next-iron-session": "^4.2.0",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
