--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "lint:fix": "next lint --fix",
+    "generate": "prisma generate",
+    "build": "next build",
+    "vercel-build": "npm run generate && npm run build"
   },
   "prisma": {
     "seed": "node ./src/lib/prisma/seed.cjs"
