--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
+    "critters": "^0.0.23",
     "date-fns": "^4.1.0",
     "editorjs-html": "^4.0.5",
     "formidable": "^3.5.3",
