Mise en place de la traduction Fr et EN

--- a/.env
+++ b/.env
@@ -21,6 +21,10 @@ SESSION_PASSWORD="nyCBWj9pmyghU4V"
 
 VITE_OPENAI_API_KEY="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"
 
+# Production
+
+
+
 # Supabase
 SUPABASE_URL="https://fstfsffzkgjggvtdhvwu.supabase.co"
 SUPABASE_REGION="eu-west-3"
