--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@editorjs/paragraph": "^2.11.7",
     "@editorjs/quote": "^2.7.6",
     "@editorjs/table": "^2.4.4",
+    "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -34,6 +35,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.9",
     "@supabase/supabase-js": "^2.50.2",
+    "@tanstack/react-query": "^5.83.0",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
@@ -45,6 +47,7 @@
     "formidable": "^3.5.3",
     "framer-motion": "^12.4.10",
     "industriel-rh-site-1": "file:",
+    "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
