--- a/package.json
+++ b/package.json
@@ -36,8 +36,11 @@
     "@radix-ui/react-tabs": "^1.1.9",
     "@supabase/supabase-js": "^2.50.2",
     "@tanstack/react-query": "^5.83.0",
+    "@types/bcryptjs": "^2.4.6",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
@@ -52,7 +55,7 @@
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.486.0",
-    "next": "15.2.0",
+    "next": "^15.4.5",
     "next-iron-session": "^4.2.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
@@ -67,6 +70,7 @@
     "react-spinners": "^0.15.0",
     "recharts": "^2.15.2",
     "sonner": "^2.0.5",
+    "swagger-ui-react": "^5.27.0",
     "swiper": "^11.2.4",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.1.0",
