--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^20.19.4",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
