Mise en place du recaptcha

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # Connect to Supabase via connection pooling.
+
 DATABASE_URL="postgresql://postgres.fstfsffzkgjggvtdhvwu:pascal2000@aws-0-eu-west-3.pooler.supabase.com:5432/postgres"
 
 EMAIL_USER="recrutement@industriellerh.com"
@@ -20,6 +21,11 @@ JWT_SECRET="hrbcR+cIcG8Qq6P5PK7n9ksmGi/7DyoVc5h2C71p+lI="
 SESSION_PASSWORD="nyCBWj9pmyghU4V"
 
 VITE_OPENAI_API_KEY="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"
+
+RECAPTCHA_SECRET_KEY="6Lejo_crAAAAAPHx138dAjg5cJwwfE4rKN90Gzdp"
+
+RECAPTCHA_SITE_KEY="6Lejo_crAAAAABC-I-GD7iXU9B7dcgsuh2pkin6p"
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY="6Lejo_crAAAAABC-I-GD7iXU9B7dcgsuh2pkin6p"
 
 # Production
 
