--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,30 +12,30 @@ env:
   NODE_VERSION: '20.x'
 
 jobs:
-  lint:
-    name: Lint Code
-    runs-on: ubuntu-latest
+  # lint:
+  #   name: Lint Code
+  #   runs-on: ubuntu-latest
     
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
+  #     - name: Setup Node.js
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: ${{ env.NODE_VERSION }}
+  #         cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
+  #     - name: Install dependencies
+  #       run: npm ci
 
-      - name: Run ESLint
-        run: npm run lint
+  #     - name: Run ESLint
+  #       run: npm run lint
 
   build:
     name: Build Application
     runs-on: ubuntu-latest
-    needs: lint
+    # needs: lint
     
     steps:
       - name: Checkout code
@@ -83,7 +83,7 @@ jobs:
   deploy:
     name: Deploy to VPS
     runs-on: ubuntu-latest
-    needs: [lint, build, type-check]
+    needs: [ build, type-check]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     
     steps:
