--- a/package.json
+++ b/package.json
@@ -54,15 +54,15 @@
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.486.0",
-    "next": "^15.4.5",
+    "next": "16.1.6",
     "next-auth": "^4.24.11",
     "next-iron-session": "^4.2.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
     "openai": "^5.2.0",
-    "react": "^19.0.0",
+    "react": "19.2.4",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "19.2.4",
     "react-dropzone": "^14.3.8",
     "react-google-recaptcha-v3": "^1.11.0",
     "react-hot-toast": "^2.6.0",
@@ -87,10 +87,10 @@
     "@types/leaflet": "^1.9.20",
     "@types/node": "^20.19.4",
     "@types/nodemailer": "^6.4.17",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.13",
+    "@types/react-dom": "19.2.3",
     "eslint": "^9",
-    "eslint-config-next": "15.2.0",
+    "eslint-config-next": "16.1.6",
     "prisma": "^6.15.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
@@ -110,6 +110,8 @@
     "swagger-ui-react": {
       "react": "$react",
       "react-dom": "$react-dom"
-    }
+    },
+    "@types/react": "19.2.13",
+    "@types/react-dom": "19.2.3"
   }
 }
