--- a/package.json
+++ b/package.json
@@ -16,86 +16,86 @@
   },
   "dependencies": {
     "@editorjs/checklist": "^1.6.0",
-    "@editorjs/code": "^2.9.3",
-    "@editorjs/editorjs": "^2.30.8",
-    "@editorjs/embed": "^2.7.6",
+    "@editorjs/code": "^2.9.4",
+    "@editorjs/editorjs": "^2.31.1",
+    "@editorjs/embed": "^2.8.0",
     "@editorjs/header": "^2.8.8",
-    "@editorjs/image": "^2.10.2",
-    "@editorjs/list": "^2.0.6",
+    "@editorjs/image": "^2.10.3",
+    "@editorjs/list": "^2.0.9",
     "@editorjs/paragraph": "^2.11.7",
     "@editorjs/quote": "^2.7.6",
-    "@editorjs/table": "^2.4.4",
+    "@editorjs/table": "^2.4.5",
     "@heroicons/react": "^2.2.0",
-    "@prisma/client": "^6.15.0",
-    "@radix-ui/react-accordion": "^1.2.10",
-    "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.11",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-popover": "^1.1.13",
-    "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-tabs": "^1.1.9",
-    "@supabase/supabase-js": "^2.50.2",
-    "@tanstack/react-query": "^5.83.0",
-    "@types/bcryptjs": "^2.4.6",
-    "axios": "^1.8.4",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^3.0.2",
-    "chart.js": "^4.5.0",
+    "@prisma/client": "^6.19.2",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@supabase/supabase-js": "^2.95.3",
+    "@tanstack/react-query": "^5.90.20",
+    "@types/bcryptjs": "^3.0.0",
+    "axios": "^1.13.5",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
+    "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cookie": "^1.0.2",
-    "critters": "^0.0.23",
+    "cookie": "^1.1.1",
+    "critters": "^0.0.25",
     "date-fns": "^4.1.0",
     "editorjs-html": "^4.0.5",
-    "formidable": "^3.5.3",
-    "framer-motion": "^12.4.10",
-    "jose": "^6.0.12",
-    "jsonwebtoken": "^9.0.2",
+    "formidable": "^3.5.4",
+    "framer-motion": "^12.34.0",
+    "jose": "^6.1.3",
+    "jsonwebtoken": "^9.0.3",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
-    "lucide-react": "^0.486.0",
-    "next": "16.1.6",
-    "next-auth": "^4.24.11",
+    "lucide-react": "^0.563.0",
+    "next": "^16.1.6",
+    "next-auth": "^4.24.13",
     "next-iron-session": "^4.2.0",
     "next-themes": "^0.4.6",
-    "nodemailer": "^6.10.0",
-    "openai": "^5.2.0",
-    "react": "19.2.4",
-    "react-chartjs-2": "^5.3.0",
-    "react-dom": "19.2.4",
-    "react-dropzone": "^14.3.8",
+    "nodemailer": "^7.0.7",
+    "openai": "^6.19.0",
+    "prisma": "^6.19.2",
+    "react": "^19.2.4",
+    "react-chartjs-2": "^5.3.1",
+    "react-dom": "^19.2.4",
+    "react-dropzone": "^14.4.0",
     "react-google-recaptcha-v3": "^1.11.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
-    "react-select": "^5.10.1",
-    "react-spinners": "^0.15.0",
-    "recharts": "^2.15.2",
-    "sonner": "^2.0.5",
-    "swagger-ui-react": "^5.27.1",
-    "swiper": "^11.2.4",
-    "swr": "^2.3.3",
-    "tailwind-merge": "^3.1.0",
-    "tw-animate-css": "^1.2.5",
-    "zod": "^3.24.2"
+    "react-select": "^5.10.2",
+    "react-spinners": "^0.17.0",
+    "recharts": "^3.7.0",
+    "sonner": "^2.0.7",
+    "swagger-ui-react": "^5.31.0",
+    "swiper": "^12.1.0",
+    "swr": "^2.4.0",
+    "tailwind-merge": "^3.4.0",
+    "tw-animate-css": "^1.4.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/leaflet": "^1.9.20",
-    "@types/node": "^20.19.4",
-    "@types/nodemailer": "^6.4.17",
+    "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/leaflet": "^1.9.21",
+    "@types/node": "^25.2.2",
+    "@types/nodemailer": "^7.0.9",
     "@types/react": "19.2.13",
     "@types/react-dom": "19.2.3",
-    "eslint": "^9",
+    "eslint": "^10",
     "eslint-config-next": "16.1.6",
-    "prisma": "^6.15.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.3"
   },
   "overrides": {
     "react-copy-to-clipboard": {
