--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,6 +7,8 @@ on:
   pull_request:
     branches:
       - main
+  # Déclenchement manuel pour tester le déploiement
+  workflow_dispatch:
 
 env:
   NODE_VERSION: '20.x'
@@ -83,45 +85,48 @@ jobs:
   deploy:
     name: Deploy to VPS
     runs-on: ubuntu-latest
-    needs: [ build, type-check]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    needs: [ build, type-check ]
+    if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Deploy to VPS via SSH
         uses: appleboy/ssh-action@v1.0.3
+        env:
+          GITHUB_SHA: ${{ github.sha }}
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           port: ${{ secrets.VPS_PORT || 22 }}
           script: |
-            # Naviguer vers le répertoire du projet
-            cd ${{ secrets.VPS_DEPLOY_PATH || '/home/deploy/Industriel_RH' }}
+            set -e
+            DEPLOY_PATH="${{ secrets.VPS_DEPLOY_PATH || '/home/deploy/Industriel_RH' }}"
+            COMMIT_SHA="${{ github.sha }}"
             
-            # Récupérer les dernières modifications
-            git fetch origin
-            git reset --hard origin/main
+            echo "📌 Commit à déployer: ${COMMIT_SHA}"
             
-            # Installer les dépendances
+            cd "${DEPLOY_PATH}" || { echo "❌ Répertoire introuvable: ${DEPLOY_PATH}"; exit 1; }
+            
+            # Vérifier que origin pointe bien vers le dépôt
+            git remote -v
+            git fetch origin main
+            git checkout main
+            git reset --hard "${COMMIT_SHA}"
+            echo "✅ Code à jour sur le commit: $(git rev-parse --short HEAD)"
+            
+            # Nettoyer le cache Next.js pour forcer un build propre
+            rm -rf .next
+            
             npm ci --production=false
-            
-            # Générer le client Prisma
             npm run generate
-            
-            # Build l'application
             npm run build
             
             # Redémarrer l'application (ajustez selon votre configuration)
-            # Option 1: Si vous utilisez PM2
             pm2 restart industriel-rh || pm2 start npm --name "industriel-rh" -- start
             
-            # Option 2: Si vous utilisez systemd (décommentez si nécessaire)
-            # sudo systemctl restart industriel-rh.service
-            
-            # Option 3: Si vous utilisez Docker (décommentez si nécessaire)
-            # docker-compose down && docker-compose up -d --build
-            
-            echo "✅ Déploiement terminé avec succès!"
+            echo "✅ Déploiement terminé avec succès! Commit: $(git rev-parse --short HEAD)"
