--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -86,6 +86,10 @@ jobs:
           name: nextjs-build
           path: ./deploy
 
+      # Fichier à la racine pour que le SCP le dépose directement dans target 
+      - name: Prepare file for SCP
+        run: mv deploy/release.tar.gz release.tar.gz
+
       - name: Copy build to VPS
         uses: appleboy/scp-action@v0.1.7
         with:
@@ -93,7 +97,7 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           port: ${{ secrets.VPS_PORT || 22 }}
-          source: "deploy/release.tar.gz"
+          source: "release.tar.gz"
           target: ${{ secrets.VPS_DEPLOY_PATH || '/home/deploy/Industriel_RH' }}
 
       - name: Deploy to VPS via SSH
@@ -110,21 +114,27 @@ jobs:
             DEPLOY_PATH="${{ secrets.VPS_DEPLOY_PATH || '/home/deploy/Industriel_RH' }}"
 
             echo "📌 Déploiement du build sur le serveur"
-
             mkdir -p "$DEPLOY_PATH"
             cd "$DEPLOY_PATH"
 
-            if [ ! -f release.tar.gz ]; then
-              echo "❌ release.tar.gz introuvable dans $DEPLOY_PATH"
+            # L'action SCP peut déposer le fichier en release.tar.gz ou dans un sous-dossier
+            if [ -f release.tar.gz ]; then
+              TARBALL="release.tar.gz"
+            elif [ -f deploy/release.tar.gz ]; then
+              TARBALL="deploy/release.tar.gz"
+            else
+              echo "Contenu de $DEPLOY_PATH :"
+              ls -la
+              echo "❌ release.tar.gz introuvable"
               exit 1
             fi
 
             # Supprimer l'ancien build (conserver le reste du repo si présent)
             rm -rf .next node_modules package.json package-lock.json public
 
-            # Extraire le build copié par l'étape SCP
-            tar -xzf release.tar.gz
-            rm release.tar.gz
+            # Extraire le build
+            tar -xzf "$TARBALL"
+            rm -f release.tar.gz deploy/release.tar.gz
 
             echo "✅ Build extrait sur le serveur"
 
