Mise à jour du script d'update de la base de données

--- a/.github/workflows/seed-database.yml
+++ b/.github/workflows/seed-database.yml
@@ -13,7 +13,6 @@ env:
 
 jobs:
   seed:
-    name: Run Prisma Seed
     runs-on: ubuntu-latest
 
     steps:
@@ -23,11 +22,9 @@ jobs:
           echo "❌ Seeding aborted. You must type YES to proceed."
           exit 1
 
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
@@ -40,8 +37,8 @@ jobs:
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
-      - name: Run database seed
-        run: npx prisma db seed
+      - name: Run database seed (ESM)
+        run: npx ts-node-esm ./src/lib/prisma/seed.ts
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
