Mise à jour de tsconfig.json pour prendre ne comte l'exécution node js

--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint:fix": "next lint --fix",
     "generate": "prisma generate",
     "build": "next build",
-    "vercel-build": "npm run generate && npm run build"
+    "vercel-build": "npm run generate && npm run build",
+    "build:seed": "tsc -p tsconfig.seed.json",
+    "seed": "node dist/lib/prisma/seed.js"
+  },
+  "prisma": {
+    "seed": "npm run build:seed && node dist/lib/prisma/seed.js"
   },
   "dependencies": {
     "@editorjs/checklist": "^1.6.0",
