--- a/.github/workflows/seed-database.yml
+++ b/.github/workflows/seed-database.yml
@@ -31,16 +31,18 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL || 'postgresql://user:password@localhost:5432/db' }}
+        
       - name: Generate Prisma Client
-        run: npx prisma generate
+        run: npm run generate
         env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL || 'postgresql://user:password@localhost:5432/db' }}
 
-      - name: Run database seed (ESM)
-        run: npx ts-node-esm ./src/lib/prisma/seed.ts
+      - name: Run database seed
+        run: npm run seed
         env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL || 'postgresql://user:password@localhost:5432/db' }}
 
       - name: ✅ Seed completed
         run: echo "✅ Database seed executed successfully"
