--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,16 +11,12 @@
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
-    // "module": "esnext",
-    // "moduleResolution": "bundler",
-    "allowArbitraryExtensions": true,
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
     "incremental": true,
-    "module": "CommonJS",
-    "moduleResolution": "node",
-    "rootDir": "src",
     "plugins": [
       {
         "name": "next"
