--- a/.github/workflows/seed-database.yml
+++ b/.github/workflows/seed-database.yml
@@ -40,7 +40,7 @@ jobs:
           DATABASE_URL: ${{ secrets.DATABASE_URL || 'postgresql://user:password@localhost:5432/db' }}
 
       - name: Run database seed
-        run: npm run seed
+        run: npx prisma db seed
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL || 'postgresql://user:password@localhost:5432/db' }}
 
