--- a/.github/workflows/seed-database.yml
+++ b/.github/workflows/seed-database.yml
@@ -29,20 +29,29 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
 
+      - name: Check DATABASE_URL
+        run: |
+          if [ -z "${{ secrets.DATABASE_URL }}" ]; then
+            echo "❌ Configurez le secret DATABASE_URL dans GitHub : Settings → Secrets and variables → Actions"
+            echo "   Le seed nécessite une base PostgreSQL accessible (Neon, Supabase, VPS, etc.)."
+            exit 1
+          fi
+          echo "✅ DATABASE_URL est configuré"
+
       - name: Install dependencies
         run: npm ci
         env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL || 'postgresql://user:password@localhost:5432/db' }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
         
       - name: Generate Prisma Client
         run: npm run generate
         env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL || 'postgresql://user:password@localhost:5432/db' }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
       - name: Run database seed
         run: npx prisma db seed
         env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL || 'postgresql://user:password@localhost:5432/db' }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
       - name: ✅ Seed completed
         run: echo "✅ Database seed executed successfully"
