Mise à jour du workflow

--- a/.github/workflows/seed-database.yml
+++ b/.github/workflows/seed-database.yml
@@ -49,7 +49,7 @@ jobs:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
       - name: Run database seed
-        run: npx prisma db seed
+        run: node ./src/lib/prisma/run-seed.cjs
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
