--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "vercel-build": "npm run generate && npm run build",
     "seed": "node ./src/lib/prisma/run-seed.cjs"
   },
+  "prisma": {
+    "seed": "node ./src/lib/prisma/seed.cjs"
+  },
   "dependencies": {
     "@editorjs/checklist": "^1.6.0",
     "@editorjs/code": "^2.9.4",
