--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Generate Prisma Client
         run: npm run generate
         env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL || 'postgresql://user:password@localhost:5432/db' }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
       - name: Build Next.js application
         run: npm run build
