--- a/.github/workflows/seed-database.yml
+++ b/.github/workflows/seed-database.yml
@@ -8,13 +8,9 @@ on:
         required: true
         default: "NO"
 
-env:
-  NODE_VERSION: 20.x
-
 jobs:
   seed:
     runs-on: ubuntu-latest
-
     steps:
       - name: ⛔ Safety check
         if: github.event.inputs.confirm != 'YES'
@@ -22,36 +18,19 @@ jobs:
           echo "❌ Seeding aborted. You must type YES to proceed."
           exit 1
 
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-node@v4
+      - name: Trigger seed on VPS
+        uses: appleboy/ssh-action@v1.0.3
         with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-
-      - name: Check DATABASE_URL
-        run: |
-          if [ -z "${{ secrets.DATABASE_URL }}" ]; then
-            echo "❌ Configurez le secret DATABASE_URL dans GitHub : Settings → Secrets and variables → Actions"
-            echo "   Le seed nécessite une base PostgreSQL accessible (Neon, Supabase, VPS, etc.)."
-            exit 1
-          fi
-          echo "✅ DATABASE_URL est configuré"
-
-      - name: Install dependencies
-        run: npm ci
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-        
-      - name: Generate Prisma Client
-        run: npm run generate
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-
-      - name: Run database seed
-        run: node ./src/lib/prisma/run-seed.cjs
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-
-      - name: ✅ Seed completed
-        run: echo "✅ Database seed executed successfully"
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          key: ${{ secrets.VPS_SSH_KEY }}
+          port: 22
+          script: |
+            echo "📌 Running database seed on server..."
+            cd /home/deploy/Industriel_RH
+            source ~/.nvm/nvm.sh
+            nvm use 20
+            npm ci
+            npx prisma generate
+            npx prisma db seed
+            echo "✅ Seed completed on server"
