Ajout de la databse _url à l'env du workflow de seed

--- a/.github/workflows/seed-database.yml
+++ b/.github/workflows/seed-database.yml
@@ -45,11 +45,14 @@ jobs:
 
       - name: Run seed on VPS
         uses: appleboy/ssh-action@v1.0.3
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           port: ${{ secrets.VPS_PORT || 22 }}
+          envs: DATABASE_URL
           script: |
             echo "📌 Running database seed on server..."
             cd ${{ secrets.VPS_DEPLOY_PATH || '/home/deploy/Industriel_RH' }}
