--- a/.github/workflows/seed-database.yml
+++ b/.github/workflows/seed-database.yml
@@ -33,14 +33,14 @@ jobs:
       - name: Build seed (TS → CJS)
         run: npm run build:seed
 
-      - name: Copy prisma-seed and package.json to VPS
+      - name: Copy prisma-seed, prisma and package.json to VPS
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           port: ${{ secrets.VPS_PORT || 22 }}
-          source: "prisma-seed,package.json"
+          source: "prisma-seed,prisma,package.json"
           target: ${{ secrets.VPS_DEPLOY_PATH || '/home/deploy/Industriel_RH' }}
 
       - name: Run seed on VPS
@@ -59,5 +59,6 @@ jobs:
             source ~/.nvm/nvm.sh 2>/dev/null || true
             nvm use 20 2>/dev/null || true
             npx prisma generate
+            npx prisma migrate deploy
             npx prisma db seed
             echo "✅ Seed completed on server"
