Prise en compte des remarques

--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,17 @@ NEXT_PUBLIC_USER_AVATAR_URL="https://cdn3d.iconscout.com/3d/premium/thumb/man-av
 DATABASE_URL="postgresql://user:password@host:5432/database"
 
 # ============ Email ============
+# Gmail : smtp.gmail.com, port 587, utilisez un mot de passe d'application (Sécurité Google > Mots de passe des applications)
+EMAIL_HOST="smtp.gmail.com"
+EMAIL_PORT=587
 EMAIL_USER=""
 EMAIL_PASS=""
+EMAIL_FROM_NAME="Industriel RH"
+EMAIL_FROM_EMAIL="contact@industriellerh.com"
+EMAIL_REPLY_TO="contact@industriellerh.com"
+EMAIL_REPLY_TO_NAME="Industriel RH"
+EMAIL_REPLY_TO_EMAIL="contact@industriellerh.com"
+EMAIL_REPLY_TO_NAME="Industriel RH"
 
 # ============ Google OAuth ============
 GMAIL_CLIENT_ID=""
