--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@types/nodemailer": "^7.0.9",
     "@types/react": "19.2.13",
     "@types/react-dom": "19.2.3",
+    "baseline-browser-mapping": "^2.9.19",
     "eslint": "^10",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
