--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
     "vercel-build": "npm run generate && npm run build",
     "build:seed": "tsc -p tsconfig.seed.build.json",
     "seed": "node ./src/lib/prisma/run-seed.cjs",
-    "seed:roles-users": "node ./src/lib/prisma/run-seed-roles-users.cjs"
-  },
-  "prisma": {
-    "seed": "node ./prisma-seed/seed.js"
+    "seed:roles-users": "node ./src/lib/prisma/run-seed-roles-users.cjs",
+    "prisma:baseline": "node scripts/prisma-baseline.js"
   },
   "dependencies": {
     "@editorjs/checklist": "^1.6.0",
