Prise ec compte des modifs db dans le workflow git

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -148,6 +148,8 @@ jobs:
             echo "✅ Build extrait sur le serveur"
 
             # Migrations Prisma (base locale sur le VPS)
+            npx prisma generate
+            npx prisma migrate status migrate
             npx prisma migrate deploy
 
             # Redémarrage PM2
